--- a/styles.css
+++ b/styles.css
@@ -601,3 +601,6 @@ input:checked ~ label:before {
 .rating:hover > input:checked ~ label:before {
   opacity: 0.4;
 }
+#lblGreetings{
+  color: var(--spotify-white);
+}
