completed first exercise

--- a/styles.css
+++ b/styles.css
@@ -434,7 +434,7 @@ th {
 
 .good-morning-card-container {
   display: flex;
-  min-width: 300px;
+  width: 300px;
   height: 80px;
   margin: 16px 16px 16px 0;
 }
